# xframes-jni-library

./: .gitignore  CMakeLists.txt  README.md  callbacks-handler.cpp  callbacks-handler.h  vcpkg.json  xframes-runner.cpp  xframes-runner.h  xframes-wrapper.cpp  xframes-wrapper.h
